docs: Add more tips

--- a/docs/docs/cucumber.mdx
+++ b/docs/docs/cucumber.mdx
@@ -72,3 +72,13 @@ scenario('eating', () => {
    </TabItem>
 </Tabs>
 
+## IntelliJ IDEA
+
+For the best experience with IntelliJ IDEA:
+
+Open settings `Editor > Language Injections`
+
+Disable `HTML in JS Strings`
+
+If you have it installed, also disable the Cucumber.js plugin. This plugin interferes with go-to definition for steps.
+
